@@ -1,8 +1,6 @@
 <?xml version="1.0"?>
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
-<data>
-    <xpath expr="//field[@name='lines']" position="after">
-        <button name="open_lines" colspan="4"/>
-    </xpath>
-</data>
+<form>
+</form>
+
