@@ -1,7 +1,11 @@
 <?xml version="1.0"?>
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
-<form>
-    <label name="date"/>
-    <field name="date"/>
-</form>
+<data>
+    <xpath expr="/form" position="inside">
+        <newline/>
+        <label name="date"/>
+        <field name="date"/>
+        <newline/>
+    </xpath>
+</data>
