@@ -1,3 +1,4 @@
+* Add button to open price list lines
 
 Version 7.2.0 - 2024-04-29
 --------------------------
